# Muscriptor-Studio

./: .gitignore  README.md  plan.md  pyproject.toml
backend/: main.py
backend/core/: muscriptor_engine.py
backend/routes/: health.py  transcription.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: ProjectBanner.tsx  ScorebookHeader.tsx
frontend/src/features/engine-status/: engineApi.ts  types.ts  useEngineHealth.ts
frontend/src/features/engine-status/components/: DeviceStatusSection.tsx
frontend/src/features/export/: exportService.ts
frontend/src/features/export/components/: OutputSection.tsx
frontend/src/features/review/: reviewData.ts  types.ts
frontend/src/features/review/components/: InstrumentList.tsx  PianoRollSection.tsx
frontend/src/features/transcription/: transcriptionApi.ts  types.ts  useTranscription.ts
frontend/src/features/transcription/components/: TranscriptionSettingsSection.tsx  UploadAudioSection.tsx
frontend/src/services/: engineClient.ts
